// Vitest Snapshot v1

exports[`VAuthBodyWrapper > should reject malformed payloads 3`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "username must be a string",
      "matches": "username must match /^[a-z0-9_]+$/ regular expression",
      "maxLength": "username must be shorter than or equal to 32 characters",
      "minLength": "username must be longer than or equal to 4 characters",
    },
    "property": "username",
    "value": {},
  },
]
`;

exports[`VAuthBodyWrapper > should reject malformed payloads 4`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "password must be a string",
      "matches": "password must match /^[\\\\w!\\"#$%&'()*+,./:;<=>?@[\\\\\\\\\\\\]^\`{|}~-]+$/ regular expression",
      "maxLength": "password must be shorter than or equal to 1024 characters",
      "minLength": "password must be longer than or equal to 8 characters",
    },
    "property": "password",
    "value": 123,
  },
]
`;

exports[`VAuthBodyWrapper > should reject malformed payloads 5`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isNotEmpty": "password should not be empty",
      "isString": "password must be a string",
      "matches": "password must match /^[\\\\w!\\"#$%&'()*+,./:;<=>?@[\\\\\\\\\\\\]^\`{|}~-]+$/ regular expression",
      "maxLength": "password must be shorter than or equal to 1024 characters",
      "minLength": "password must be longer than or equal to 8 characters",
    },
    "property": "password",
    "value": undefined,
  },
]
`;
